--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: url('../responsive_portfolio/images/spiration-light.png') repeat;
+    background: url('../images/spiration-light.png') repeat;
     font-family: Arial, Helvetica, sans-serif;
     overflow: auto;
     color: #777777;
